# stripe-django

./: .dockerignore  .env.base  .env.django  .gitignore  CHANGELOG.md  CLAUDE.md  Makefile  README.md  docker-compose.yml  helpers.py  pyproject.toml  schema.yml
.github/workflows/: ci.yml  claude-review.yml  deploy-dev.yml
apps/: base_views.py  email_transport.py
apps/admin_panel/: admin.py  apps.py
apps/admin_panel/tests/: test_admin.py
apps/billing/: admin.py  apps.py  email.py  models.py  repositories.py  serializers.py  services.py  tasks.py  urls.py  views.py  webhook.py  webhook_urls.py
apps/billing/management/commands/: seed_catalog.py  seed_exchange_rates.py  sync_exchange_rates.py  sync_stripe_catalog.py
apps/billing/migrations/: 0001_initial.py  0002_add_owner_constraint.py  0002_initial.py  0003_add_org_fk_to_stripe_customer.py  0003_initial.py  0004_add_product_and_product_price.py  0004_subscription_subscription_has_owner.py  0005_remove_discount_fields.py  0005_seed_boost_products.py  0006_add_plan_description.py  0007_seed_boost_products.py  0007_update_plans_and_prices.py  0008_make_subscription_stripe_fields_nullable.py  0008_plan_tier_to_integer.py  0009_exchangerate_currency_pk.py  0009_remove_multicurrency.py  0010_add_subscription_user_status_index.py  0010_django_audit_medium_low.py  0011_add_plan_tier.py  0011_performance_audit_indexes.py  0012_paid_free_invariant.py  0012_stripeevent_payload_encoder.py  0013_creditbalance_credittransaction.py  0014_drop_free_subscriptions.py
apps/billing/tests/: conftest.py  test_api_docs.py  test_email.py  test_enum_drift.py  test_middleware.py  test_migration_0014_drop_free_subscriptions.py  test_models.py  test_repositories.py  test_seed_catalog.py  test_serializers.py  test_services.py  test_sync_stripe_catalog.py  test_tasks.py  test_views.py  test_webhook.py
apps/dashboard/: views.py
apps/dashboard/templates/dashboard/: base.html  dashboard.html
apps/dashboard/tests/: conftest.py  test_views.py
apps/marketing/: apps.py  email.py  serializers.py  tasks.py  throttling.py  urls.py  views.py
apps/marketing/tests/: conftest.py  test_email.py  test_inquiries.py  test_tasks.py
apps/orgs/: admin.py  invitation_urls.py  models.py  repositories.py  serializers.py  services.py  tasks.py  urls.py  views.py
apps/orgs/migrations/: 0001_initial.py  0002_initial.py  0003_alter_orgmember_unique_together_alter_org_deleted_at_and_more.py  0004_alter_org_created_by_set_null.py  0005_add_org_is_active.py  0006_invitation_status_declined.py  0007_django_audit_medium_low.py  0008_performance_audit_indexes.py  0009_remove_org_deleted_at.py
apps/orgs/tests/: conftest.py  test_admin.py  test_models.py  test_serializers.py  test_services.py  test_tasks.py  test_views.py
apps/users/: admin.py  apps.py  auth_serializers.py  auth_urls.py  auth_views.py  authentication.py  email.py  managers.py  models.py  oauth.py  repositories.py  schema.py  serializers.py  services.py  tasks.py  urls.py  views.py  views_references.py
apps/users/management/commands/: seed_dev_data.py
apps/users/migrations/: 0001_initial.py  0002_alter_user_deleted_at_alter_user_supabase_uid.py  0002_emailverificationtoken_passwordresettoken_and_more.py  0003_add_partial_index_active_supabase_uid.py  0003_user_registration_method_socialaccount.py  0004_add_updated_at.py  0004_remove_redundant_token_hash_db_index.py  0005_add_phone_timezone_job_title_bio.py  0005_remove_deleted_at_scheduled_deletion_at.py  0006_make_full_name_required.py  0006_performance_audit_indexes.py  0007_add_pronouns.py  0008_add_scheduled_deletion_at.py
apps/users/tests/: conftest.py  test_admin.py  test_auth_views.py  test_authentication.py  test_email.py  test_helpers.py  test_management_seed_dev_data.py  test_models.py  test_oauth.py  test_oauth_callback.py  test_repositories.py  test_schema.py  test_serializers.py  test_services.py  test_supabase_client.py  test_tasks.py  test_views.py  test_views_references.py
config/: asgi.py  celery.py  spectacular_hooks.py  supabase.py  urls.py  wsgi.py
config/settings/: base.py  dev.py  prod.py  test.py
config/tests/: test_security_middleware.py  test_spectacular_hooks.py
core/: pyproject.toml
core/saasmint_core/: __init__.py
core/saasmint_core/domain/: org.py  product.py  stripe_customer.py  subscription.py  user.py
core/saasmint_core/exceptions/: __init__.py
core/saasmint_core/repositories/: customer.py  org.py  plan.py  product.py  stripe_event.py  subscription.py  user.py
core/saasmint_core/services/: billing.py  coupons.py  currency.py  gdpr.py  locale.py  orgs.py  phone.py  pronouns.py  subscriptions.py  supabase_admin.py  webhooks.py
core/stripe_saas_core/: __init__.py
core/stripe_saas_core/domain/: org.py  payment.py  stripe_customer.py  stripe_event.py  subscription.py  user.py
core/stripe_saas_core/exceptions/: __init__.py
core/stripe_saas_core/repositories/: customer.py  org.py  plan.py  stripe_event.py  subscription.py  user.py
core/stripe_saas_core/services/: billing.py  coupons.py  currency.py  gdpr.py  orgs.py  subscriptions.py  webhooks.py
core/tests/: conftest.py  test_domain.py  test_exceptions.py  test_services_billing.py  test_services_coupons.py  test_services_currency.py  test_services_gdpr.py  test_services_locale.py  test_services_orgs.py  test_services_phone.py  test_services_subscriptions.py  test_services_supabase_admin.py  test_services_webhooks.py
infra/: Caddyfile  Dockerfile  docker-compose.vps.yml  entrypoint.dev.sh  entrypoint.sh  uvicorn-log-config.json
infra/nginx/: api.saasmint.net.conf  app.saasmint.net.conf
infra/scripts/: bootstrap-vps.sh  vps.sh
middleware/: exceptions.py  security.py
scripts/: parse_direct_deps.py
scripts/tests/: test_parse_direct_deps.py
static/: admin.css  users_admin.css
templates/admin/: base_site.html  index.html  logged_out.html
templates/admin/orgs/: delete_org_confirmation.html
templates/admin/orgs/org/: submit_line.html
templates/rest_framework/: base.html
templates/shared/: topbar.html
